# DeUX

./: .gitignore  AGENTS.md  AI_USAGE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  example.py  main.py  mkdocs.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/PULL_REQUEST_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  docs.yml  gitleaks.yml  python-ci.yml  python-gitleaks.yml  python-lint.yml  python-release.yml  python-test.yml  python-tests.yml  python-typecheck.yml
deckboard/: _transport.py  deck.py  dial.py  icon.py  image.py  page.py  types.py
docs/: STYLE.md  architecture.md  dsui.md  elgato-hid-protocol.md  example.md  gen_diagrams.py  gen_ref_pages.py  index.md
docs/guides/: cli-tools.md  creating-dui-packages.md  dui-repository.md  error-handling.md  full-screen-images.md  theming.md
docs/reference/: dsui.md  dui.md  render.md  runtime.md  tools.md  ui.md
examples/: basic_usage.py  brightness_slider.py  dsui_packages.py  dual_value.py  equalizer_widget.py  ha_media_card.py  label_key.py  light_widget.py  lights_toggle.py  media_controller.py  media_widget.py  mock_backend.py  multi_device.py  slider_widgets.py  smart_home.py  streamdeck.py  touch_panel.py  volume_slider.py
examples/AudioCard.dsui/: manifest.yaml
examples/AudioCard.dui/: manifest.yaml
examples/BrightnessSlider.dui/: manifest.yaml
examples/ClockKey.dui/: manifest.yaml
examples/DashboardCard.dui/: manifest.yaml
examples/GaugeCard.dui/: manifest.yaml
examples/IconKey.dsui/: manifest.yaml
examples/IconKey.dui/: manifest.yaml
examples/LabelKey.dsui/: manifest.yaml
examples/LightCard.dui/: manifest.yaml
examples/LightsKey.dsui/: manifest.yaml
examples/PictureKey.dui/: manifest.yaml
examples/PowerKey.dsui/: manifest.yaml
examples/PowerKey.dui/: manifest.yaml
examples/TimerCard.dui/: manifest.yaml
examples/VolumeSlider.dsui/: manifest.yaml
examples/assets/: theme.css
examples/screenshots/: .gitignore
prompts/: code-quality-review.md  dependency-health-review.md  documentation-review.md  security-review.md  test-coverage-gap-review.md
src/deckboard/: __init__.py  _transport.py  button.py  deck.py  dial.py  icon.py  image.py  page.py  touchscreen.py  types.py
src/deckboard/dsui/: __init__.py  card.py  event_map.py  iconify.py  key.py  loader.py  schema.py  svg_renderer.py
src/deckboard/integrations/: __init__.py  homeassistant.py
src/deckboard/presets/: __init__.py  audio.py  climate.py  ha_media.py  lighting.py  media.py  sensors.py
src/deckboard/render/: __init__.py  debug_grid.py  fonts.py  icons.py  key_renderer.py  metrics.py  touch_renderer.py
src/deckboard/runtime/: __init__.py  capabilities.py  deck.py  device_info.py  discovery.py  events.py  manager.py  transport.py
src/deckboard/tools/: __init__.py  __main__.py  preview.py
src/deckboard/ui/: __init__.py  info_screen.py  screen.py  slots.py  touch_strip.py
src/deckboard/ui/cards/: __init__.py  base.py  blank.py  stack.py  status.py
src/deckboard/ui/controls/: __init__.py  balance.py  base.py  brightness.py  encoder_slot.py  equalizer.py  kelvin.py  key_slot.py  range.py  range_control.py  temperature.py  volume.py
src/deckboard/ui/elements/: __init__.py  base.py  dual_value.py  metrics.py  text.py
src/deckboard/widgets/: __init__.py  balance.py  brightness.py  dual_value.py  equalizer.py  equalizer_widget.py  icon_widget.py  kelvin.py  light_widget.py  media_widget.py  slider.py  slider_widget.py  temperature.py  text.py  touch_panel.py  volume.py
src/deckui/: __init__.py
src/deckui/dsui/: __init__.py  card.py  event_map.py  iconify.py  key.py  loader.py  schema.py  svg_renderer.py
src/deckui/dui/: __init__.py  animator.py  card.py  event_map.py  iconify.py  key.py  loader.py  repository.py  schema.py  spinner.py  svg_renderer.py
src/deckui/render/: __init__.py  image_fetch.py  key_renderer.py  metrics.py  screen_renderer.py  svg_rasterize.py  theme.py  touch_renderer.py
src/deckui/runtime/: __init__.py  async_event.py  capabilities.py  deck.py  device_info.py  discovery.py  events.py  manager.py  transport.py
src/deckui/tools/: __init__.py  __main__.py  preview.py  verify.py
src/deckui/ui/: __init__.py  controller.py  info_screen.py  screen.py  touch_strip.py
src/deux/: __init__.py  _errors.py  _url_safety.py  _version.py  _version_safe.py  _xml.py
src/deux/dui/: __init__.py  animator.py  binding_mixin.py  card.py  event_map.py  iconify.py  key.py  loader.py  repository.py  schema.py  spinner.py  svg_renderer.py
src/deux/render/: __init__.py  background_layer.py  context.py  image_fetch.py  key_renderer.py  metrics.py  profiler.py  svg_rasterize.py  theme.py  touch_renderer.py
src/deux/runtime/: __init__.py  _executor.py  async_event.py  capabilities.py  deck.py  device_info.py  discovery.py  event_router.py  events.py  manager.py  renderer.py  splash.py  transport.py
src/deux/tools/: __init__.py  __main__.py  preview.py  splash.py  verify.py
src/deux/ui/: __init__.py  controller.py  info_screen.py  screen.py  touch_strip.py
tests/: conftest.py  test_animator.py  test_async_event.py  test_busy_guard.py  test_button.py  test_capabilities.py  test_controller.py  test_debug_grid.py  test_deck.py  test_deck_full_screen.py  test_deck_render_gate.py  test_defaults.py  test_dial.py  test_dial_accumulator.py  test_discovery.py  test_dsui_card.py  test_dsui_event_map.py  test_dsui_iconify.py  test_dsui_integration.py  test_dsui_key.py  test_dsui_loader.py  test_dsui_schema.py  test_dsui_svg_renderer.py  test_dui_bind.py  test_dui_card.py  test_dui_event_map.py  test_dui_iconify.py  test_dui_integration.py  test_dui_key.py  test_dui_loader.py  test_dui_schema.py  test_dui_svg_renderer.py  test_dui_transform.py  test_encoder_slot.py  test_example_streamdeck.py  test_gen_ref_pages.py  test_hid_ctypes.py  test_hid_device.py  test_hid_discovery.py  test_hid_protocol.py  (+49 more)
tools/: generate_diagrams.py
(+22 files in other folders)
