[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deckui"
version = "0.1.0"
description = "A high-level, asyncio-native Python library for Elgato Stream Deck devices."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Graphras" },
]
keywords = ["streamdeck", "elgato", "deck", "asyncio", "hid"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware",
    "Typing :: Typed",
]
dependencies = [
    "pillow>=12.0.0",
    "streamdeck>=0.9.8",
    "cairosvg>=2.7.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/Graphras-com/DeckUI"
Repository = "https://github.com/Graphras-com/DeckUI"
Issues = "https://github.com/Graphras-com/DeckUI/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/deckui"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # comprehensions
    "SIM", # simplify
]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "types-PyYAML>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = [
    "StreamDeck.*",
    "cairosvg",
]
ignore_missing_imports = true
