[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "deux"
dynamic = ["version"]
description = "A high-level, asyncio-native Python library for Elgato Stream Deck devices."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Graphras" },
]
keywords = [
    "python",
    "automation",
    "sdk",
    "hid",
    "asynchronous",
    "python-library",
    "declarative-ui",
    "asyncio",
    "elgato",
    "streamdeck",
    "stream-deck",
    "plugin-framework",
    "elgato-stream-deck",
    "asyncio-python"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware",
    "Typing :: Typed",
]
dependencies = [
    "pillow>=12.2.0",
    "pyyaml>=6.0.3",
    "platformdirs>=4.10.0",
    "defusedxml>=0.7.1",
    "resvg @ git+https://github.com/graphras-com/resvg-py.git@main",
]

[project.urls]
Homepage = "https://github.com/Graphras-com/DeUX"
Repository = "https://github.com/Graphras-com/DeUX"
Issues = "https://github.com/Graphras-com/DeUX/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/deux/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/deux"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "W",       # pycodestyle warnings
    "F",       # pyflakes
    "I",       # isort
    "B",       # flake8-bugbear
    "UP",      # pyupgrade
    "C4",      # comprehensions
    "SIM",     # simplify
    "PLC0415", # pylint: imports must live at the top of the module
]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "PLC0415"]

[project.optional-dependencies]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "types-PyYAML>=6.0.12.20260518",
]

docs = [
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "mkdocs-gen-files>=0.6.1",
    "mkdocs-literate-nav>=0.6.3",
    "pylint>=4.0.5",
]

audit = [
    "pip-audit>=2.7",
]

dev = [
    "ruff>=0.15.15",
    "mypy>=2.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = [
    "resvg",
    "resvg.*",
    "defusedxml",
    "defusedxml.*",
]
ignore_missing_imports = true
